--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.4.1",
     "@next/eslint-plugin-next": "15.3.4",
     "@react-types/shared": "3.32.1",
     "@tailwindcss/postcss": "4.1.11",
